LoyaltyApp/force-app/main/default/objects/Loyalty_Program_Business_Group__c/Loyalty_Program_Business_Group__c.object-meta.xml
<CustomObject>
    <label>Loyalty Program Business Group</label>
    <nameField>
        <label>Program Business Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loyalty Program Business Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>