LoyaltyApp/force-app/main/default/objects/Loyalty_Program_Business_Group__c/fields/Business_Group__c.field-meta.xml
<CustomField>
    <fullName>Business_Group__c</fullName>
    <label>Business Group</label>
    <referenceTo>Loyalty_Business_Group__c</referenceTo>
    <relationshipName>Program_Business_Groups</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>