LoyaltyApp/force-app/main/default/objects/Loyalty_Program_Business_Group__c/fields/Program_Business_Group_Code__c.field-meta.xml
<CustomField>
    <fullName>Program_Business_Group_Code__c</fullName>
    <displayFormat>PROGRAMGROUP-{0000}</displayFormat>
    <label>Program Business Group Code</label>
    <type>AutoNumber</type>
</CustomField>